--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -560,3 +560,15 @@ footer a { color: white; }
 .no-js #loader-wrapper {
     display: none;
 }
+
+.navbar {
+    background-color: rgba(70, 70, 253, 0.8); /* Cambia el color de fondo según tus preferencias */
+}
+
+.navbar-nav .nav-link {
+    color: #555; /* Cambia el color del texto según tus preferencias */
+}
+
+.navbar-nav .nav-link:hover {
+    color: #555; /* Cambia el color al pasar el ratón sobre el enlace */
+}
